custom.css
* {
    margin: 0;
    padding: 0
}

body {
    background-color: hsl(0, 0%, 85.1%);
}

.navbar-brand {
    height: auto
}

.navbar-toggle .icon-bar {
    background-color: #fff;
    transition: all .3s
}

.navbar-toggle:hover .navbar-toggle .icon-bar {
    background-color: #ccc
}

.bar-mid-x {
    transform: scaleX(0)
}

.bar-top-x {
    transform: rotate(45deg);
    margin-top: 6px
}

.navbar-toggle .icon-bar+.icon-bar.bar-bot-x {
    transform: rotate(-45deg);
    margin-top: -8px;
    margin-bottom: 6px
}

/* .btn {
    background-color: #d2322d;
    border-color: #d2322d
}

.btn:hover {
    color: #fff !important;
    border-color: #363636;
    box-shadow: inset 0 -50px 0px rgba(0, 0, 0, 0.1)
}

.btn:focus,
.btn:active {
    box-shadow: inset 0 -62px 0px rgba(0, 0, 0, 0.5);
    color: #fff !important
} */

a.dropdown-toggle,
#dropdownMenu6-1 a,
.submenu-solo-link {
    cursor: pointer;
    color: hsl(213.3, 18.4%, 19.2%);
    font-weight: 600;
}

.nav-item.dropdown {
    margin: 0 12px;
}

.dropdown-toggle::after {
	display: none;
}

.navbar-expand-lg {
    box-shadow: 0px 2px 2px hsl(0, 0%, 73.7%);
    background-color: #fff;
    padding-left: 30px;
}

a:not([href]):not([tabindex]).dropdown-toggle-level-1 {
    color: hsl(213.3, 18.4%, 19.2%);
}

a:not([href]):not([tabindex]):hover,
a:not([href]):not([tabindex]):focus,
a:not([href]):not([tabindex]).dropdown-toggle-level-1:hover,
a:not([href]):not([tabindex]).dropdown-toggle-level-1:focus,
a:not([href]):not([tabindex]).dropdown-toggle-level-1.active,
a:not([href]):not([tabindex]).dropdown-toggle.active,
.dropdown-item.submenu-solo-link:hover,
.dropdown-item.submenu-solo-link:focus,
.dropdown-item.submenu-solo-link:active {
    color: #4E3EB1;
    background-color: #fff;
}

ul.dropdown-menu {
    padding: 10px 0 0;
    background-color: hsl(220, 13%, 95.5%);
    border: 0;
    top: 114%;
    left: -170%;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

#dropdown-menu-first {
    left: -146px;
}

#dropdown-menu-second {
    left: -66px;
}

#dropdown-menu-third {
    left: -60px;
}

#dropdown-menu-fourth {
    left: -92px;
}

#dropdown-menu-fifth {
    left: -40px;
}

.nav-item-dropdown-lv-1 > ul.dropdown-menu::after {
    content: "";
    width: 0; 
    height: 0; 
    border-left: 12px solid transparent;
    border-right: 12px solid transparent;
    border-bottom: 12px solid hsl(220, 13%, 95.5%);
    position: absolute;
    left: 172px;
    top: -12px;
}

.dropdown-submenu {
    margin-left: 40px;
}

a:not([href]):not([tabindex]),
#dropdownMenu6-1 a,
.submenu-solo-link {
    color: #4E3EB1;
    width: 100%;
    height: 100%;
    display: block;
    padding: 15px 24px;
}

#dropdownMenu6-1 a {
    padding: 15px 8px;
}

#dropdownMenu1,
#dropdownMenu2-1,
#dropdownMenu3-1,
#dropdownMenu4-1,
#dropdownMenu5-1,
#dropdownMenu6-1 a {
    color: hsl(213, 23.8%, 16.5%);
}

#dropdownMenu1:hover,
#dropdownMenu2-1:hover,
#dropdownMenu3-1:hover,
#dropdownMenu4-1:hover,
#dropdownMenu5-1:hover,
#dropdownMenu6-1 a:hover {
    color: #4E3EB1;
}

.dropdown-submenu:hover {
    background-color: #fff;
}

.dropdown-submenu .dropdown-menu {
    width: 530px;
    top: 0;
    left: 100%;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    background-color: #fff;
}

ul.dropdown-submenu-lv-3 {
    margin: 0;
    padding-top: 20px;
    padding-left: 50px;
}

.dropdown-submenu-lv-3 .dropdown-item {
    margin: 0;
    padding: 0;
    font-weight: 500;
    color: hsl(216, 9.4%, 31.2%);
}

.dropdown-submenu-lv-3 .dropdown-item:hover {
    background-color: transparent;
    text-decoration: underline;
}

.submenu.left {
    margin-right: 40px;
}

.dropdown-submenu-lv-3 p {
    font-size: 12px;
    margin-bottom: 30px;
    color: hsl(214.3, 5.9%, 46.3%);
}

.dropdown-submenu-lv-3 .submenu {
    width: 40%;
    display: inline-block;
}

.banner {
	width: 100%;
	background-color: hsl(248.6, 49.8%, 46.9%);
	color: #fff;
	position: relative;
	left: 0;
	right: 0;
	text-align: right;
    bottom: 0;
    padding-left: 10px;
}

.banner a {
	color: #fff;
	text-decoration: none;
	padding: 14px;
    display: block;
    position: relative;
    right: 26px;
    top: -2px;
    margin-top: 40px;
}

.banner a:hover {
	color: hsl(261.6, 100%, 88%);
}

.banner a:hover::after {
    border-left: 10px solid hsl(261.6, 100%, 88%);
}

.banner a::after {
    content: "";
    width: 0; 
    height: 0; 
    border-left: 10px solid #fff;
    border-top: 10px solid transparent;
    border-bottom: 10px solid transparent;
    position: absolute;
    right: -6px;
    bottom: 16px;
}

/* wide dropdowns */
#dropdown-menu-first {
	left: -146px;
	height: 366px;
	width: 900px;
	padding-right: 530px;
}

#dropdown-menu-second {
	width: 739px;
    height: 300px;
    padding-right: 530px
}

#dropdown-menu-third {
	width: 739px;
    height: 366px;
    padding-right: 530px
}

#dropdown-menu-fourth {
	left: -92px;
    height: 196px;
    width: 284px;
}

#dropdown-menu-fifth {
	left: -56px;
    height: 220px;
    width: 200px;
}

#dropdown-menu-first::before,
#dropdown-menu-second::before,
#dropdown-menu-third::before {
	content: "";
	width: 530px;
	height: 100%;
	position: absolute;
	right: 0;
	top: 0;
    background-color: #fff;
    transform: translateX(0);
    left: initial;
    border: 0;
}

#dropdown-menu-fourth::before,
#dropdown-menu-fifth::before {
    display: none;
}

#dropdown-menu-second::after {
    left: 94px;
}

#dropdown-menu-third::after {
    left: 92px;
}

#dropdown-menu-fourth::after {
    left: 126px;
}

#dropdown-menu-fifth::after {
    left: 87px;
}

body {
    height: 1000px;
    padding-bottom: 200px;
}

.banner {
	width: 100%;
	background-color: hsl(248.6, 49.8%, 46.9%);
	color: #fff;
	position: absolute;
	left: 0;
	right: 0;
	text-align: right;
	padding-left: 10px;
	bottom: 0;
}

.dropdown-submenu .dropdown-menu {
	width: 530px;
	top: 0;
    right: 0;
    left: initial;
	border-top-left-radius: 0;
	border-top-right-radius: 0;
	background-color: #fff;
}

.banner a {
    margin-top: 0;
}

.banner a::after {
	right: -12px;
	bottom: 16px;
}

.btn-solo {
	background-color: hsl(247.8, 100%, 68.2%);
	border: 0;
	text-transform: uppercase;
	color: #fff;
	width: 160px;
	height: 35px;
	padding: 0;
	text-align: center;
	padding-top: 4px;
    letter-spacing: 1px;
    position: relative;
    right: -106%;
}

.btn-solo:hover {
    color: hsl(261.6, 100%, 88%);
	background-color: hsl(247.8, 100%, 68.2%);

}

.search-input {
    right: -70px;
}

.form-search {
	margin-top: 9px;
	position: relative;
	width: 176px;
}

.form-search:hover .input-search,
.form-search:active .input-search,
.form-search:focus .input-search {
    width: 100%;
    border-bottom: 1px solid hsl(0, 0%, 44.3%);
    z-index: 3;
}

.form-search .input-search {
	width: 0%;
	position: absolute;
	right: 0;
	top: 0;
    border: 0;
    border-radius: 0;
    border-bottom: 0px solid hsl(0, 0%, 44.3%);
    transition: all 200ms;
}

.input-search:focus,
.input-search:active {
    width: 100%;
    border-bottom: 1px solid hsl(0, 0%, 44.3%);
    box-shadow: none;
    z-index: 3;
}

.btn-search {
    position: absolute;
    right: -8px;
    top: -6px;
    z-index: 4;
}

.icon-search {
	height: auto;
	width: 22px;
}

#dropdownMenu7-1 {
	font-size: 14px;
	vertical-align: bottom;
    margin-top: 2px;
    color: hsl(214.3, 5.9%, 46.3%);
    position: relative;
    right: -150px;
    z-index: 2;
}

#dropdownMenu7-1::before {
	content: "";
	width: 0;
	height: 0;
	border-left: 5px solid transparent;
	border-bottom: 5px solid hsl(212.3, 7%, 36.7%);
	border-right: 5px solid transparent;
	position: absolute;
	right: -8px;
	top: 26px;
}

#dropdown-menu-seventh {
    left: 144%;
}

#dropdown-menu-seventh::after {
    left: 70px;
}

/* responsive */

@media ( min-width : 992px ) and ( max-width : 1199px ) {

    .navbar-expand-lg .navbar-nav {
        width: 100%;
    }

    ul#dropdown-menu-more {
        width: 612px;
        left: -266px;
    }

    ul#dropdown-menu-more li {
        display: inline-block;
    }

    ul#dropdown-menu-more::after {
        left: 282px;
    }

    #dropdown-menu-fourth {
        left: -58px;
    }

    #dropdown-menu-fifth {
        left: -48px;
    }

    #dropdown-menu-fourth::after {
        left: 92px;
    }

    #dropdown-menu-fifth::after {
        left: 72px;
    }

    .form-search {
        margin-right: 166px;
    }

    .btn-solo {
        position: absolute;
        right: 0;
    }

    .search-container {
        position: absolute;
        right: 0;
    }
}

@media ( max-width : 991px ) {

    .navbar-collapse {
        padding-top: 20px;
    }

    #dropdownMenu1.highlight,
    #dropdownMenu2-1.highlight,
    #dropdownMenu3-1.highlight,
    #dropdownMenu4-1.highlight,
    #dropdownMenu5-1.highlight {
        background-color: hsl(247.8, 100%, 68.2%);
        color: hsl(261.6, 100%, 88%);
    }

    .navbar-toggler {
        padding: 0;
    }

    .bar1, .bar2, .bar3 {
        width: 28px;
        height: 3px;
        background-color: #333;
        margin: 6px 0;
        transition: 0.4s;
    }
      
      .change .bar1 {
        -webkit-transform: rotate(-45deg) translate(-6px, 6px);
        transform: rotate(-45deg) translate(-6px, 6px);
      }
      
      .change .bar2 {opacity: 0;}
      
      .change .bar3 {
        -webkit-transform: rotate(45deg) translate(-6px, -7px);
        transform: rotate(45deg) translate(-6px, -7px);
      }
    .navbar-brand {
        margin-left: 30px;
    }

    ul.navbar-nav {
        width: 110%;
        margin-left: -42px;
    }

    .btn-solo {
        position: absolute;
        top: 12px;
        right: 15px;
    }

    #dropdownMenu6-1 a {
        padding-left: 24px;
    }

    .nav-item-dropdown-lv-1 {
        border-bottom: 1px solid hsl(220, 13%, 85.5%);
        padding-left: 10px;
    }

    a:not([href]):not([tabindex]), .submenu-solo-link {
        color: #4E3EB1;
        width: auto;
        height: auto;
        display: block;
        padding: 15px 24px;
    }

    #dropdown-menu-first::before, #dropdown-menu-second::before, #dropdown-menu-third::before {
        display: none;
    }

    #dropdown-menu-first,#dropdown-menu-second,#dropdown-menu-third,#dropdown-menu-fourth, #dropdown-menu-fifth {
        left: 0;
        top: 0;
        width: auto;
        height: auto;
        padding-right: 0;
    }

    .banner {
        display: none;
    }

    #dropdownMenu7-1 {
        right: initial;
    }

    #dropdownMenu7-1::before {
        display: none;
    }

    .search-container-mobile {
        border-bottom: 0;
    }
    
    .form-search-mobile .btn-search {
        position: relative;
        left: 12px;
        top: 0;
        z-index: 4;
    }
    
    .form-search-mobile .input-search-mobile {
        display: inline-block;
        width: auto;
        vertical-align: middle;
        border: 0;
        margin-top: 2px;
    }
    
    .form-search-mobile .input-search-mobile:focus {
        box-shadow: none;
    }
}

